--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ body{
 }
 
 *{
-  font-family:  "Inter", sans-serif;;
+  font-family:  "Inter", sans-serif;
+  box-sizing: border-box;
 }
 
 button{
