--- a/src/components/Verticals/Verticals.module.css
+++ b/src/components/Verticals/Verticals.module.css
@@ -5,12 +5,12 @@
 }
 
 .img_container{
+    width: inherit;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     align-items: center;
-    margin: 0 1rem 0 1rem;
-   
+    padding: 1rem;  
 }
 .verticals_div h1{
     text-align: center; 
@@ -28,7 +28,7 @@
 }
 .img_div img{
     object-fit: cover;
-    height: inherit;  
+    height: 100%;
     width: 100%;
     border-radius: 5px;
  }
