--- a/src/index.css
+++ b/src/index.css
@@ -31,4 +31,25 @@ button{
   }
 }
 
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root{
+  background-color: var(--color-black) !important;
+  border: 1px solid  rgba(255, 255, 255, .1);
+  
+  
+}
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root{
+  width: 400px !important;
+  border-left: none;
+  border-right: none;
+  padding: 0.5rem;
+}
+
+@media(max-width:800px){
+  .css-1elwnq4-MuiPaper-root-MuiAccordion-root{
+    width: 100% !important;
+  }
+}
+
+
+
 
