--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
   --color-grey : #1D1D1D;
 }
 body{
-  background-color: black;
-  margin: 0;
-  color: var(--color-white);
+  background-color: black  !important;
+  margin: 0  !important;
+  color: var(--color-white)  !important;
 
 }
 
@@ -33,14 +33,14 @@ button{
 
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root{
   background-color: var(--color-black) !important;
-  border: 1px solid  rgba(255, 255, 255, .1);
+  border: 1px solid  rgba(255, 255, 255, .1)  !important;
   
   
 }
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root{
   width: 400px !important;
-  border-left: none;
-  border-right: none;
+  border-left: none  !important;
+  border-right: none  !important;
   padding: 0.5rem;
 }
 
