--- a/src/components/FAQ/FAQ.module.css
+++ b/src/components/FAQ/FAQ.module.css
@@ -14,18 +14,17 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    min-height: 400px;
+    min-height: 300px;
     padding: 1rem;
    
 }
 .FAQ_heading p{
     margin-top: -10px;
     font-size: smaller;
-    width: 80%;
     
 }
 .accordion{
-    align-self: flex-end;
+    border: 1px solid white;
 }
 @media(max-width:800px){
     .sub_container{
