--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,11 @@ button{
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root{
   background-color: var(--color-black) !important;
   border: 1px solid  rgba(255, 255, 255, .1)  !important;
-  
-  
+}
+.css-67l5gl{
+  background-color:  var(--color-black) !important;
+  border: 1px solid  rgba(255, 255, 255, .1)  !important;
+  width: 400px !important;
 }
 .css-1elwnq4-MuiPaper-root-MuiAccordion-root{
   width: 400px !important;
