--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,9 @@ button{
   .css-1elwnq4-MuiPaper-root-MuiAccordion-root{
     width: 100% !important;
   }
+  .css-67l5g{
+    width: 100% !important;
+  }
 }
 
 
