--- a/src/components/Subscribe/Subscribe.module.css
+++ b/src/components/Subscribe/Subscribe.module.css
@@ -6,14 +6,20 @@
 .subscribe_content{
     margin: 1rem;
     background-color:  rgba(255, 255, 255, .1);
-    padding-top: 2rem;
-    padding-bottom: 3rem;
+    height: 300px;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-bottom: 1rem;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .subscribe_content h1{
-    margin-bottom: 2rem;
+    margin: 0;
 }
+
 form{
     width: fit-content;
     border-radius: 0;
@@ -21,7 +27,7 @@ form{
     display: flex;
     gap: 0.25rem;
     justify-content: center;
-    margin: auto;
+   
 }
 form > *{
     border-radius: 1px;
