--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,6 +2,10 @@ footer{
     display: flex;
     flex-direction: column;
     padding: 2rem 1rem;
+    padding-bottom: 5rem;
+    max-width: 1100px;
+    margin: auto;
+
 }
 .footer_info, ul, .social{
     display: flex;
