--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,4 +1,4 @@
-form{
+.header_form{
     height: max-content;
     border-radius: 50px;
     margin-right: 0.25rem;
@@ -6,7 +6,7 @@ form{
     padding: 0.55 1rem;
    margin-top: 2rem;
 }
-.Input_text{
+ .Input_text{
     height: inherit;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
@@ -17,7 +17,7 @@ form{
     outline: none;
 }
 
-form button{
+form .header_form_btn{
    background-color: var(--color-primary);
    color: var(--color-black);
    border: none;
