--- a/src/components/Subscribe/Subscribe.module.css
+++ b/src/components/Subscribe/Subscribe.module.css
@@ -16,9 +16,6 @@
     justify-content: center;
     align-items: center;
 }
-.subscribe_content h1{
-    margin: 0;
-}
 
 form{
     width: fit-content;
@@ -30,16 +27,20 @@ form{
    
 }
 form > *{
-    border-radius: 1px;
+    border-radius: 5px;
     border: none;
 }
 form > input{
     padding-left: 1rem;
     background-color:  rgba(255, 255, 255,9.9);
+    outline: none;
 }
 form button{
     border-radius: 5px;
     padding:  0.75rem 2rem;
+    background-color: var(--color-primary);
+    color: var(--color-black);
+    font-weight: bold;
 }
 @media(max-width: 600px){
     form{
