--- a/src/components/Team/Team.module.css
+++ b/src/components/Team/Team.module.css
@@ -18,8 +18,9 @@
     padding:  0.5rem;
     border: 1px solid  rgba(255, 255, 255, .1);
 }
-.member_div:hover{
+.member_div:hover *, .member_div:hover {
     background-color: var(--color-primary);
+    color: var(--color-black)
 }
 .member_div img{
    width: 50px;
@@ -34,6 +35,7 @@
     font-size: 0.75rem;
     color:  var(--color-white)
 }
+
 @media(max-width: 600px){
     .member_div{
         align-items: center;
